api(meta): provide profile metadata schema; add CORS; simplify payload