@@ -1,33 +1,28 @@
 package com.rickym270.controllers;
 
+import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.time.OffsetDateTime;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
+@CrossOrigin(origins = "https://rickym270.github.io")
 @RestController
 @RequestMapping("/api")
 public class MetaController {
 
     @GetMapping("/meta")
     public Map<String, Object> getMeta() {
-        String isoTime = OffsetDateTime.now().toString();
-
         Map<String, Object> response = new HashMap<>();
         response.put("name", "Ricky Martinez");
-        response.put("tagline", "SDET • Python/Java+ • CI/CD");
-        response.put("location", "NYC");
-        response.put("languages", Arrays.asList("EN", "ES", "DE"));
-        Map<String, String> links = new HashMap<>();
-        links.put("github", "https://github.com/rickym270");
-        links.put("site", "https://rickym270.github.io");
-        response.put("links", links);
-        response.put("time", isoTime);
-
+        response.put("title", "Senior SDET / Developer in Test");
+        response.put("location", "New York, USA");
+        response.put("languages", List.of("English", "Spanish", "German"));
+        response.put("github", "https://github.com/rickym270");
+        response.put("portfolio", "https://rickym270.github.io");
         return response;
     }
 }
